styles.css
@import url("https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Roboto+Condensed:wght@300;400;500&display=swap");

@font-face {
  font-family: Asylum;
  src: url("./assets/BlackAsylumDEMO-KCFonts.ttf");
}

:root {
  --title-text: #f8f2f1f3;
  --small-text: #f5f4f4ec;
  --link-color: #f5f4f4;
  --red-text: #a01414;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html {
  width: 100%;
}
body {
  font-family: "Roboto Condensed", sans-serif;
  line-height: 1.4;
  background: #000;
  overflow-x: hidden;
  color: var(--small-text);
  width: 100%;
}

a {
  text-decoration: none;
  -webkit-tap-highlight-color: transparent;
}

a:focus {
  outline: none;
}

a:active {
  border: none;
  outline: none;
}

ul {
  display: flex;
  justify-content: center;
  width: 100%;
}

li {
  list-style-type: none;
}

.fa-bars {
  display: none;
}

nav {
  padding: 0.5rem 0;
  position: fixed;
  top: 0;
  width: 100%;

  z-index: 10;
  background: transparent;
  height: 140px;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  z-index: 10;
  height: auto;
}

.nav-logo {
  width: 220px;
  z-index: -10;
  position: absolute;
  top: -1.2rem;
  left: 0;
}

.nav-logo-container {
  position: relative;
  will-change: transform;
  animation: logoAnimation 0.8s linear 0.1s;
  backface-visibility: hidden;
}

.nav-logo-container a {
  text-decoration: none;
}

.nav-logo-container h2 {
  color: var(--title-text);
  z-index: 100;
  padding: 1.8rem 0 0 1.8rem;
  font-family: Asylum;
  font-size: 2.5rem;
  font-weight: 300;
  opacity: 0.9;
}

.nav-link-container {
  height: auto;
}

.nav-link-container a {
  width: 100%;
  z-index: 10;
  display: inline-block;
  margin-right: 2rem;
  color: var(--link-color);
  font-size: 1.1rem;
  font-weight: 500;
  text-decoration: none;
}

.nav-link-container a:hover,
.nav-link-container a:active {
  color: var(--red-text);
  border-top: 2px solid var(--red-text);
  cursor: pointer;
}

.video-section {
  position: relative;
}

.video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background: #000;
  background-size: cover;
  background-position: center center;
}

.video-container video {
  min-width: 100%;
  min-height: 100%;
  object-fit: contain;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.video-container:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  background: radial-gradient(rgba(20, 19, 19, 0.951), rgba(97, 26, 26, 0.421));
  backdrop-filter: brightness(70%);
}

.content-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  height: 100%;
  width: 85%;
  padding: 21rem 15rem 15rem;
}

.content {
  z-index: 10;
  max-width: 50%;
  position: relative;
}

.content h1 {
  color: var(--title-text);
  font-family: "IM Fell English SC";
  font-weight: 400;
  font-size: 3.8rem;
  line-height: 1;
  margin-bottom: 10px;
}

.content p {
  color: rgba(255, 255, 255, 0.767);
  font-size: 1.5rem;
  font-weight: 300;
  max-width: 88%;
}

.btn {
  display: inline-block;
  padding: 10px 40px;
  color: #ffffffd8;
  font-family: sans-serif;
  font-weight: bold;
  font-size: 1.05rem;
  background: var(--red-text);
  border: 1px solid var(--primary-color);
  border-radius: 2px;
  margin-top: 25px;
  text-decoration: none;
}

.btn:hover {
  transform: scale(0.98);
}

#about {
  padding: 3.5rem 3.5rem 3rem;
  text-align: left;
  display: grid;
  grid-template-columns: 1fr;
  width: 90%;
  margin: 0 auto;
}

.award-logo-container {
  display: flex;
  height: auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem 0 8rem;
}

.award-logo-container blockquote {
  margin-top: 2rem;
}

.award-logo-container p {
  color: var(--small-text);
  font-size: 1.5rem;
}

.award-logo-container footer {
  color: var(--small-text);
  margin-left: 4rem;
}

.awards {
  height: 200px;
  opacity: 0.9;
}

.history-header {
  color: var(--red-text);
  text-align: center;
  font-family: "IM Fell English SC";
  font-size: 3.5rem;
  letter-spacing: 0.3rem;
}

.details {
  color: var(--small-text);
  display: flex;
  height: auto;
  align-items: center;
  justify-content: space-around;
  padding: 5rem 0;
}

.details-img img {
  width: 450px;
  height: 500px;
  object-fit: cover;

  filter: brightness(85%);
}

.details .text {
  width: 50%;
  font-size: 1.5rem;
}

#visit {
  padding: 0 3rem;
  text-align: left;
  width: 90%;
  margin: 8rem auto 0;
}

.visit-flex-container {
  height: 100%;
  width: 75%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0 auto;
}

.visit-text-container {
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  height: auto;
  width: 50%;
}

.visit-text-container h3 {
  color: var(--red-text);
  text-transform: uppercase;
  margin-bottom: 20px;
  font-family: Asylum;
  font-weight: 300;
  font-size: 1.8rem;
}

.visit-text-container h1 {
  font-size: 3rem;
  color: var(--title-text);
  font-weight: 400;
  line-height: 1;
  font-family: "IM Fell English SC";
}

.visit-categories {
  display: flex;
  height: auto;
  flex-direction: column;
  margin-top: 2rem;
  width: 90%;
}

.visit-categories h1 {
  font-size: 2.5rem;
  font-weight: 500;
  color: var(--red-text);
}

.visit-categories p {
  font-size: 1.5rem;
  font-weight: 300;
  color: var(--small-text);
}

.category {
  display: flex;
  height: auto;
  align-items: center;
  justify-content: left;
  margin-bottom: 2rem;
}

.category-img img {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  margin-right: 1.8rem;
  object-fit: cover;
  background-position: center;
  filter: brightness(85%);
}

.calendar-container {
  flex: 1;
}

.calendar {
  height: 500px;
  width: 700px;
}

.hours h3,
.hours h4,
.tickets h3 {
  color: var(--title-text);
  font-family: "Roboto Condensed";
  font-weight: 400;
  margin-bottom: 0.5rem;
  font-size: 1.4rem;
}
/* ... */

